# planaco

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
brand/: STYLE_GUIDE.md
docs/superpowers/plans/: 2026-07-02-planaco-website.md
docs/superpowers/specs/: 2026-07-02-planaco-website-design.md
example/: example.ipynb
scripts/: generate_example_plots.py
src/planaco/: __init__.py  charts.py  config.py  distributions.py  project.py  style.py  task.py
tests/: test_charts.py  test_cli.py  test_distributions.py  test_project.py  test_readme_examples.py  test_refactoring.py  test_style.py  test_task.py
tests/website/: mc.test.mjs
website/: index.html
website/assets/: mc.js  site.js  style.css
website/assets/fonts/: README.md
